Bug 449900 - Mouse-click Mouse Action always runs Kate (with app's .desktop) instead of application
Summary: Mouse-click Mouse Action always runs Kate (with app's .desktop) instead of ap...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: 5.24.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords: regression
: 449830 450201 450202 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-02-09 23:59 UTC by pablo
Modified: 2022-02-14 11:54 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.1
Sentry Crash Report:


Attachments
emacs example (88.89 KB, image/png)
2022-02-09 23:59 UTC, pablo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pablo 2022-02-09 23:59:29 UTC
Created attachment 146509 [details]
emacs example

SUMMARY

Before the upgrade to 5.24, I was able to rt-click on my desktop background for the /Application Launcher/ and launch an application.

After the upgrade, for any application I try to launch, /Kate/ is run with that application's /.desktop/ file - see the attached /emacs/ example.

The work-around is to use the /Application Launcher/ from the systray.

STEPS TO REPRODUCE
1.  Set up the environment as follows:

   - /Wallpaper/ settings are:  

      o Layout > Desktop
      o Wallpaper type > Plain Color

   - /Mouse Actions/ > /Right-Button/ > /Application Launcher/

2. Mouse to the desktop background and rt-click.  Pick any application to launch.

OBSERVED RESULT

Kate is launched with the application's .desktop file.

EXPECTED RESULT

Launch the application.

SOFTWARE/OS VERSIONS

Linux/KDE Plasma:   openSUSE Tumbleweed
KDE Plasma Version: 5.24.0
KDE Frameworks Version:  5.90.0
Qt Version:  5.15.2
Comment 1 Bug Janitor Service 2022-02-10 14:24:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1445
Comment 2 Nicolas Fella 2022-02-11 16:54:31 UTC
Git commit 15021b432ae5dc673de790e43b0d877ac5d3832b by Nicolas Fella.
Committed on 11/02/2022 at 16:54.
Pushed by nicolasfella into branch 'master'.

[containmentactions/applauncher] Use ApplicationLauncherJob instead of

OpenUrlJob

We are starting a KService, but with extra steps. Use the appropriate
job.

This fixes launching apps since OpenUrlJob, by default, doesn't launch
executables

M  +2    -2    containmentactions/applauncher/launch.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/15021b432ae5dc673de790e43b0d877ac5d3832b
Comment 3 Nicolas Fella 2022-02-11 16:56:12 UTC
*** Bug 449830 has been marked as a duplicate of this bug. ***
Comment 4 Nicolas Fella 2022-02-11 16:59:02 UTC
Git commit d208c478a94979738d00d7985e8ab164d9f38160 by Nicolas Fella.
Committed on 11/02/2022 at 16:55.
Pushed by nicolasfella into branch 'Plasma/5.24'.

[containmentactions/applauncher] Use ApplicationLauncherJob instead of

OpenUrlJob

We are starting a KService, but with extra steps. Use the appropriate
job.

This fixes launching apps since OpenUrlJob, by default, doesn't launch
executables
(cherry picked from commit 15021b432ae5dc673de790e43b0d877ac5d3832b)

M  +2    -2    containmentactions/applauncher/launch.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/d208c478a94979738d00d7985e8ab164d9f38160
Comment 5 pablo 2022-02-11 21:05:27 UTC
(In reply to Nicolas Fella from comment #4)
>
> [ trimmed ]
>
> This fixes launching apps since OpenUrlJob, by default, doesn't launch
> executables

Thank you so much for the extremely quick turn-around!  <3
Comment 6 Nicolas Fella 2022-02-14 11:54:11 UTC
*** Bug 450202 has been marked as a duplicate of this bug. ***
Comment 7 Nicolas Fella 2022-02-14 11:54:32 UTC
*** Bug 450201 has been marked as a duplicate of this bug. ***