[containmentactions/applauncher] Use ApplicationLauncherJob instead of

OpenUrlJob

We are starting a KService, but with extra steps. Use the appropriate
job.

This fixes launching apps since OpenUrlJob, by default, doesn't launch
executables

BUG: 449900